# math-badge-quest

./: README.md
contract/: .gitignore  Cargo.toml  Makefile
contract/schema/: badge.json  execute_msg.json  instantiate_msg.json  query_answer.json  query_msg.json  quest.json  sub_question.json  sub_question_answer.json
contract/src/: contract.rs  msg.rs  state.rs
contract/tests/: integration.ts  package-lock.json  package.json
docs/: whitepaper.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Navbar.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/pages/: Badges.tsx  Home.tsx  Test.tsx
uploader/: package-lock.json  package.json
uploader/patches/: @cosmjs+proto-signing+0.32.4.patch
uploader/src/: instantiate.ts  query_quest.ts  upload.ts
