[package]
name = "math-badge-quest"
version = "0.1.0"
authors = ["Shyam Hari"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = []

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11"  }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11"  }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.10.3", features = ["permit"] }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
sha2 = { version = "0.10.8", features = ["asm"] }
getrandom = { version = "0.2.16", features = ["js"] }
serde_json = "1.0.128"

[[bin]]
name = "schema"
required-features = ["schema"]
